refactor: #33 PR 리뷰 반영 collect toList로 수정